trunk/Archive2/e2/d8cf5742cca17a/output
main.cpp:4:7: error: must use a typedef to declare a conversion to 'T (*)(int, int)'
    (*operator T() const)(int, int) { return nullptr; }
      ^
1 error generated.
